<resources>
    <string name="app_name">Bioskop</string>
    <string name="masukan_username">Masukan Username</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="masuk">Masuk</string>
    <string name="tidak_punya_akun">Tidak punya akun? </string>
    <string name="buat_akun">Buat Akun</string>
    <string name="masukan_email">Masukan Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>